--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "build": "node src/index.js",
     "dev": "nodemon --quiet src/index.js"
   },
   "author": "",
@@ -21,3 +21,4 @@
     "nodemon": "^3.1.9"
   }
 }
+
