--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "node src/index.js",
+    "start": "node src/index.js",
     "dev": "nodemon --quiet src/index.js"
   },
   "author": "",
